# python-network-automation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: inventory.example.yml  vlan_plan.example.yml
docs/: architecture.md
src/netauto/: __init__.py  config.py  logging_config.py  main.py
src/netauto/connections/: __init__.py
src/netauto/devices/: __init__.py  device_models.py  inventory_loader.py
src/netauto/services/: __init__.py
tests/: test_device_models.py  test_inventory_loader.py
